# CASM-Smart-Phase

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CHANGES.md  Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
python/: .coveragerc  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg
python/casmsmartphase/: MNVMerge.py  cli.py  merge_mnv_to_vcf.py  vcf_to_bed.py
python/scripts/: generate_MNV_bed.py  merge_vcf_MNVs.py
python/test_data/: bad_sample.phased.output  expected_output.bed  expected_output_hethom.bed  sample.phased.except.output  sample.phased.trinuc.output  test_exp_result.vcf  test_exp_result_trinuc.vcf  test_filt_qual_exp_result.vcf  test_input.vcf.gz.tbi  test_input_filt_qual.vcf.gz.tbi  test_input_hethom.vcf.gz.tbi  test_input_trinuc.vcf.gz.tbi  test_phase_triplet.out
python/tests/: 01_MNVMerge_test.py  02_merge_mnv_to_vcf_test.py  03_cli_test.py  04_vcf_to_bed_test.py  MNVMerge_test.py
